# zensearch

./: LICENSE  README.md  zensearch.cabal
app/: Main.hs
src/Zensearch/: Matchable.hs  Parsable.hs  Record.hs  Types.hs
src/Zensearch/Types/: Common.hs  Organization.hs  Ticket.hs  User.hs
test/Zensearch/: ParsableSpec.hs  RecordSpec.hs
test/Zensearch/Types/: OrganizationSpec.hs  TicketSpec.hs  UserSpec.hs
