name:                zensearch
version:             0.1.0.0
homepage:            https://github.com/jessekempf/zensearch
license:             AllRightsReserved
license-file:        LICENSE
author:              Jesse Kempf
maintainer:          jessekempf@gmail.com
copyright:           2020 Jesse Kempf
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Zensearch.Matchable
                     , Zensearch.Parsable
                     , Zensearch.Record
                     , Zensearch.Types
                     , Zensearch.Types.Common
                     , Zensearch.Types.Organization
                     , Zensearch.Types.Ticket
                     , Zensearch.Types.User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , attoparsec-iso8601
                     , containers
                     , text
                     , time
                     , uuid
  default-extensions: StrictData

executable zensearch
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , zensearch

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zensearch
                     , hspec
                     , QuickCheck
                     , aeson
                     , bytestring
                     , heredoc
                     , text
                     , time
                     , uuid
  other-modules:       Zensearch.ParsableSpec
                     , Zensearch.RecordSpec
                     , Zensearch.Types.OrganizationSpec
                     , Zensearch.Types.TicketSpec
                     , Zensearch.Types.UserSpec

source-repository head
  type:     git
  location: https://github.com/jessekempf/zensearch
